--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js",
+    "db:init": "node -r @std/esm scripts/initDB.mjs",
+    "db:seed": "node -r @std/esm scripts/seedDB.mjs",
+    "db:destroy": "rm -rf ./db.sqlite",
+    "db:setup": "npm run db:destroy && npm run db:init"
   },
   "repository": {
     "type": "git",
@@ -24,7 +28,7 @@
       "airbnb-base",
       "prettier"
     ],
-    "settings": {
+    "rules": {
       "import/extensions": [
         "error",
         "always",
@@ -33,10 +37,15 @@
           "jsx": "never",
           "mjs": "never"
         }
-      ],
+      ]
+    },
+    "settings": {
       "import/resolver": {
         "node": {
-          "extensions": [ ".js", ".mjs" ]
+          "extensions": [
+            ".js",
+            ".mjs"
+          ]
         }
       }
     },
@@ -50,9 +59,17 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-import": "^2.18.2",
+    "nodemon": "^1.19.4",
     "prettier": "^1.18.2"
   },
   "dependencies": {
-    "@std/esm": "^0.26.0"
+    "@koa/cors": "^3.0.0",
+    "@std/esm": "^0.26.0",
+    "knex": "^0.20.1",
+    "koa": "^2.11.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-router": "^7.4.0",
+    "rc": "^1.2.8",
+    "sqlite3": "^4.1.0"
   }
 }
