--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "db:init": "node -r @std/esm scripts/initDB.mjs",
     "db:seed": "node -r @std/esm scripts/seedDB.mjs",
     "db:destroy": "rm -rf ./db.sqlite",
-    "db:setup": "npm run db:destroy && npm run db:init"
+    "db:reset": "npm run db:destroy && npm run db:init"
   },
   "repository": {
     "type": "git",
@@ -63,6 +63,7 @@
     "prettier": "^1.18.2"
   },
   "dependencies": {
+    "@hapi/joi": "^16.1.7",
     "@koa/cors": "^3.0.0",
     "@std/esm": "^0.26.0",
     "knex": "^0.20.1",
@@ -70,6 +71,7 @@
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
     "rc": "^1.2.8",
-    "sqlite3": "^4.1.0"
+    "sqlite3": "^4.1.0",
+    "twilio": "^3.37.0"
   }
 }
