update validate schema

--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "stop": "",
     "dev": "nodemon index.js",
     "db:init": "node -r @std/esm scripts/initDB.mjs",
     "db:seed": "node -r @std/esm scripts/seedDB.mjs",
     "db:destroy": "rm -rf ./db.sqlite",
     "db:reset": "npm run db:destroy && npm run db:init",
-    "run:test": "NOTEBOOK_db__connection__filename=./test-db.sqlite nodemon index.js",
+    "test:dev": "NOTEBOOK_db__connection__filename=./test-db.sqlite nodemon index.js",
     "test:db:init": "NOTEBOOK_db__connection__filename=./test-db.sqlite node -r @std/esm scripts/initDB.mjs",
     "test:db:seed": "NOTEBOOK_db__connection__filename=./test-db.sqlite node -r @std/esm scripts/seedDB.mjs",
     "test:db:destroy": "rm -rf ./test-db.sqlite",
